// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="ajTextCard-0-2-1 aj-text-card"
>
  <div
    className="aj-text-card-header"
  >
    <h2
      className="aj-text-card-title"
    >
      Snapshot Test
    </h2>
    <p
      className="aj-text-card-subtitle"
    />
  </div>
  <div
    className="aj-text-card-body"
  >
    <p
      className="aj-text-card-content"
    >
      <div>
        Hello from snapshot test
      </div>
    </p>
  </div>
  <div
    className="aj-text-card-footer"
  >
    <div
      className="ajBaseButton-0-2-5 ajBaseButtonEnabled-0-2-6 aj-text-button ajTextButton-0-2-2 ajTextButtonEnabled-0-2-3"
      onClick={[Function]}
    >
      <button
        disabled={false}
        type="button"
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`renders correctly with all props 1`] = `
<div
  className="ajTextCard-0-2-1 aj-text-card"
>
  <div
    className="aj-text-card-header"
  >
    <h2
      className="aj-text-card-title"
    >
      Snapshot Test 2
    </h2>
    <p
      className="aj-text-card-subtitle"
    >
      Test with all props
    </p>
  </div>
  <div
    className="aj-text-card-body"
  >
    <p
      className="aj-text-card-content"
    >
      <div>
        Hello from the second snapshot test
      </div>
    </p>
  </div>
  <div
    className="aj-text-card-footer"
  >
    <div
      className="ajBaseButton-0-2-5 ajBaseButtonDisabled-0-2-7 aj-text-button ajTextButton-0-2-2 ajTextButtonDisabled-0-2-4"
      onClick={null}
    >
      <button
        disabled={true}
        type="button"
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;
